[package]
name = "elysium-core"
version = "0.1.0"
authors = ["Jan Tebernum <jan.tebernum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.0"
vulkano = "0.19.0"
vulkano-win = "0.19.0"
vulkano-shaders = "0.19.0"
